--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -4,7 +4,7 @@
 	--blue: #13293d;
 	--hovergrey: rgb(145, 137, 137);
 }
-/* ??? */
+
 * {
 	box-sizing: border-box;
 }
@@ -19,7 +19,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 1% 3%;
-	background-color: var(--blue);
+	background-color:var(--blue);
 	color: var(--white);
 	font-family: cursive;
  }
@@ -99,24 +99,6 @@ section h2 {
 	text-align: center;
 }
 
-footer {
-	padding: 20px;
-	text-align: center;
-	background: var(--blue);
-	color: var(--white);
-}
-
-footer h2 {
-	font-size: 24px;
-}
-footer div {
-	font-size: 10px;
-	color: var(--white);
-}
-footer a {
-	color: var(--hovergrey);
-}
-
 .about-me-container {
 	flex: 1;
 	background-color: var(--white);
@@ -129,7 +111,29 @@ footer a {
 	font-size: 180%;
 }
 .about-me-container p {
-	margin: 1% 20%;
+	margin: 1% 15% 3% 5%;
+
+}
+
+.about-me-section {
+    width:100%;
+    display:flex;
+    justify-content:center;
+
+}
+
+#avatar {
+    display:flex;
+    align-items:center;
+    width: 60%;
+
+}
+#avatar img{
+ 
+    margin-right: 5%;
+    width:100%; 
+    min-width:100px;
+
 }
 
 button {
@@ -207,11 +211,29 @@ button {
 	padding: 20px;
 	justify-content: space-evenly;
 	border: 1px solid black;
-	/* align-items: center; */
 }
 .contact-section img {
 	flex-shrink: 1;
 }
+
+footer {
+	padding: 20px;
+	text-align: center;
+	background: var(--blue);
+	color: var(--white);
+}
+
+footer h2 {
+	font-size: 24px;
+}
+footer div {
+	font-size: 10px;
+	color: var(--white);
+}
+footer a {
+	color: var(--hovergrey);
+}
+
 
 @media screen and (max-width: 768px) {
 	main {
