--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -116,17 +116,15 @@ section h2 {
 
 /* My picture on the left hand side */
 #avatar {
-    display:flex;
-    align-items:center;
+    display:block;
     width: 60%;
 
 }
 #avatar img{
-     margin-right: 5%;
-	flex:2;
+    margin-right: 5%;
+	flex:2 0 auto;
     width:100%; 
-    min-width:100px;
-
+    min-width:150px;
 }
 /* button that displays project name 
  * on top of screenshot 
@@ -191,7 +189,7 @@ button {
 	background-color: var(--white);
 	padding: 20px;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-evenly;
 	width: 100%;
 }
@@ -201,16 +199,23 @@ button {
 }
 .contact-section {
 	background-color: var(--white);
-	padding: 40px;
 	display: flex;
 	width: 100%;
-	flex-grow: 1 1 33%;
 	padding: 20px;
 	justify-content: space-evenly;
 	border: 1px solid black;
 }
-.contact-section img {
-	flex-shrink: 1;
+ .contact-section img {
+	flex: 1 1 30px ; 
+	max-width: 160px;
+}
+.contact-section a{
+	display:flex;
+	padding :10px;
+	flex: 1 1 30px ; 
+	max-width: 160px;
+
+
 }
 /* And finally, the footer */
 footer {
